Fix some spacing stuff

--- a/app/assets/stylesheets/games.scss
+++ b/app/assets/stylesheets/games.scss
@@ -17,7 +17,7 @@ body.games {
     }
 
     #progress {
-      @include trailer(1.5);
+      @include trailer;
       clear: both;
       .bar {
         @extend %border-radius;
